--- a/index.html
+++ b/index.html
@@ -2,5 +2,7 @@
     <head>
         <title>My First Website</title>
     </head>
-    <body></body>
+    <body>
+        <h1>welcome!</h1>
+    </body>
 </html>
